aks/manifests_rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
   
spec:
  rules:
    - host: rabbitmq.1aa413b38edc44438eef.westus.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
